# swh-indexer

./: .copier-answers.yml  .copyright-updater.yaml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTORS  MANIFEST.in  Makefile.local  PKG-INFO  README  README.md  README.rst  codemeta.json  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  swh-indexer_0.0.1.orig.tar.gz.delta  swh-indexer_0.0.1.orig.tar.gz.id  swh-indexer_0.0.10.orig.tar.gz.delta  swh-indexer_0.0.10.orig.tar.gz.id  swh-indexer_0.0.11.orig.tar.gz.delta  swh-indexer_0.0.11.orig.tar.gz.id  swh-indexer_0.0.118.orig.tar.gz.delta  swh-indexer_0.0.118.orig.tar.gz.id  swh-indexer_0.0.12.orig.tar.gz.delta  swh-indexer_0.0.12.orig.tar.gz.id  swh-indexer_0.0.124.orig.tar.gz.delta  swh-indexer_0.0.124.orig.tar.gz.id  swh-indexer_0.0.125.orig.tar.gz.delta  swh-indexer_0.0.125.orig.tar.gz.id  swh-indexer_0.0.126.orig.tar.gz.delta  swh-indexer_0.0.126.orig.tar.gz.id  swh-indexer_0.0.127.orig.tar.gz.delta  (+321 more)
debian/: changelog  control  pybuild.testfiles  rules
docs/: .gitignore  Makefile  Makefile.local  README.md  cli.rst  conf.py  custom-indexers.rst  dev-info.rst  index.rst  mesocore.rst  metadata-workflow.rst  swhpkg.rst
docs/_ext/: ld_properties.py
docs/images/: .gitignore  Makefile  metadata-flow.dot  tasks-extrinsic-metadata-indexers.uml  tasks-intrinsic-metadata-indexers.uml  tasks-metadata-indexers.uml
schema/: index.txt
sql/: Makefile  swh-func.sql  swh-indexes.sql  swh-init.sql  swh-schema.sql
sql/doc/: sql
sql/json/: indexer_configuration.tool_configuration.schema.json  revision_metadata.translated_metadata.json
sql/upgrades/: 114.sql  115.sql  116.sql  117.sql  118.sql  119.sql  121.sql  123.sql  124.sql  125.sql  126.sql  127.sql  132.sql  133.sql
swh.indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swh/foo/: bar.py
swh/indexer/: __init__.py  bibtex.py  cli.py  codemeta.py  converters.py  ctags.py  db.py  (+19 more)
(+152 files in other folders)
